--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -14,6 +14,7 @@
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-800: oklch(44.4% 0.177 26.899);
     --color-orange-50: oklch(98% 0.016 73.684);
+    --color-orange-100: oklch(95.4% 0.038 75.164);
     --color-orange-200: oklch(90.1% 0.076 70.697);
     --color-orange-300: oklch(83.7% 0.128 66.29);
     --color-orange-400: oklch(75% 0.183 55.934);
@@ -73,7 +74,6 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
-    --container-xl: 36rem;
     --container-2xl: 42rem;
     --container-3xl: 48rem;
     --container-4xl: 56rem;
@@ -300,9 +300,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -374,9 +371,6 @@
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -528,14 +522,8 @@
   .inline-flex {
     display: inline-flex;
   }
-  .table {
-    display: table;
-  }
   .aspect-\[4\/3\] {
     aspect-ratio: 4/3;
-  }
-  .h-0 {
-    height: calc(var(--spacing) * 0);
   }
   .h-0\.5 {
     height: calc(var(--spacing) * 0.5);
@@ -576,9 +564,6 @@
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
-  .h-24 {
-    height: calc(var(--spacing) * 24);
-  }
   .h-32 {
     height: calc(var(--spacing) * 32);
   }
@@ -597,35 +582,14 @@
   .h-\[4\.5rem\] {
     height: 4.5rem;
   }
-  .h-\[5\.0rem\] {
-    height: 5.0rem;
-  }
-  .h-\[5rem\] {
-    height: 5rem;
-  }
-  .h-\[6\.0rem\] {
-    height: 6.0rem;
-  }
   .h-\[8\.5rem\] {
     height: 8.5rem;
-  }
-  .h-\[10\.0rem\] {
-    height: 10.0rem;
-  }
-  .h-\[10rem\] {
-    height: 10rem;
-  }
-  .h-\[12\.0rem\] {
-    height: 12.0rem;
   }
   .h-full {
     height: 100%;
   }
   .min-h-\[4\.5rem\] {
     min-height: 4.5rem;
-  }
-  .min-h-\[80vh\] {
-    min-height: 80vh;
   }
   .min-h-\[90vh\] {
     min-height: 90vh;
@@ -720,28 +684,14 @@
   .flex-1 {
     flex: 1;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .flex-shrink-0 {
     flex-shrink: 0;
   }
   .flex-grow {
     flex-grow: 1;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
@@ -756,9 +706,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .list-inside {
     list-style-position: inside;
@@ -990,9 +937,6 @@
   .border-\[\#111827\]\/10 {
     border-color: color-mix(in oklab, #111827 10%, transparent);
   }
-  .border-\[\#aaa\] {
-    border-color: #aaa;
-  }
   .border-\[\#eee\] {
     border-color: #eee;
   }
@@ -1074,9 +1018,6 @@
   .bg-\[\#f59e0b\]\/20 {
     background-color: color-mix(in oklab, #f59e0b 20%, transparent);
   }
-  .bg-black {
-    background-color: var(--color-black);
-  }
   .bg-black\/50 {
     background-color: color-mix(in srgb, #000 50%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -1121,6 +1062,12 @@
   }
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
+  }
+  .bg-orange-100\/70 {
+    background-color: color-mix(in srgb, oklch(95.4% 0.038 75.164) 70%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-orange-100) 70%, transparent);
+    }
   }
   .bg-orange-200 {
     background-color: var(--color-orange-200);
@@ -1409,9 +1356,6 @@
   .object-cover {
     object-fit: cover;
   }
-  .object-center {
-    object-position: center;
-  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
@@ -1496,32 +1440,8 @@
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
   }
-  .pt-20 {
-    padding-top: calc(var(--spacing) * 20);
-  }
-  .pt-22 {
-    padding-top: calc(var(--spacing) * 22);
-  }
-  .pt-24 {
-    padding-top: calc(var(--spacing) * 24);
-  }
-  .pt-\[70px\] {
-    padding-top: 70px;
-  }
-  .pt-\[75px\] {
-    padding-top: 75px;
-  }
-  .pt-\[78px\] {
-    padding-top: 78px;
-  }
-  .pt-\[79px\] {
-    padding-top: 79px;
-  }
   .pt-\[80px\] {
     padding-top: 80px;
-  }
-  .pt-\[px\] {
-    padding-top: px;
   }
   .pr-8 {
     padding-right: calc(var(--spacing) * 8);
@@ -1601,9 +1521,6 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .text-\[\#000000\] {
-    color: #000000;
-  }
   .text-\[\#25D366\] {
     color: #25D366;
   }
@@ -1618,9 +1535,6 @@
   }
   .text-\[\#111827\]\/90 {
     color: color-mix(in oklab, #111827 90%, transparent);
-  }
-  .text-\[\#aaa\] {
-    color: #aaa;
   }
   .text-\[\#f3f4f6\] {
     color: #f3f4f6;
@@ -1781,22 +1695,10 @@
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-orange-700 {
-    --tw-shadow-color: oklch(55.3% 0.195 38.402);
-    @supports (color: color-mix(in lab, red, red)) {
-      --tw-shadow-color: color-mix(in oklab, var(--color-orange-700) var(--tw-shadow-alpha), transparent);
-    }
-  }
   .shadow-orange-700\/20 {
     --tw-shadow-color: color-mix(in srgb, oklch(55.3% 0.195 38.402) 20%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--color-orange-700) 20%, transparent) var(--tw-shadow-alpha), transparent);
-    }
-  }
-  .shadow-yellow-700 {
-    --tw-shadow-color: oklch(55.4% 0.135 66.442);
-    @supports (color: color-mix(in lab, red, red)) {
-      --tw-shadow-color: color-mix(in oklab, var(--color-yellow-700) var(--tw-shadow-alpha), transparent);
     }
   }
   .shadow-yellow-700\/20 {
@@ -1811,15 +1713,8 @@
   .ring-indigo-500 {
     --tw-ring-color: var(--color-indigo-500);
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .blur-3xl {
     --tw-blur: blur(var(--blur-3xl));
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .backdrop-blur-lg {
@@ -1829,10 +1724,6 @@
   }
   .backdrop-blur-sm {
     --tw-backdrop-blur: blur(var(--blur-sm));
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -2001,34 +1892,6 @@
       }
     }
   }
-  .hover\:text-\[\#000000\] {
-    &:hover {
-      @media (hover: hover) {
-        color: #000000;
-      }
-    }
-  }
-  .hover\:text-\[\#111827\] {
-    &:hover {
-      @media (hover: hover) {
-        color: #111827;
-      }
-    }
-  }
-  .hover\:text-\[\#\] {
-    &:hover {
-      @media (hover: hover) {
-        color: #;
-      }
-    }
-  }
-  .hover\:text-\[\#aaa\] {
-    &:hover {
-      @media (hover: hover) {
-        color: #aaa;
-      }
-    }
-  }
   .hover\:text-\[\#eee\] {
     &:hover {
       @media (hover: hover) {
@@ -2040,13 +1903,6 @@
     &:hover {
       @media (hover: hover) {
         color: #f59e0b;
-      }
-    }
-  }
-  .hover\:text-\[\#fff\] {
-    &:hover {
-      @media (hover: hover) {
-        color: #fff;
       }
     }
   }
@@ -2311,11 +2167,6 @@
       height: 5.0rem;
     }
   }
-  .lg\:h-\[6\.0rem\] {
-    @media (width >= 64rem) {
-      height: 6.0rem;
-    }
-  }
   .lg\:grid-cols-2 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -2526,11 +2377,6 @@ body {
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -2668,7 +2514,6 @@ body {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
